--- a/client/styles/layout/sidebar.module.css
+++ b/client/styles/layout/sidebar.module.css
@@ -74,7 +74,8 @@
 
 .internalPageList {
   list-style-type: none;
-  padding-left: 10px;
+  padding-left: 20px;
+  padding-right: 15px;
 }
 
 .externalPageList {
